--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -2,7 +2,6 @@
   background: #1a1a1a;
   height: 250px;
   box-shadow: 0px 2px 10px rgb(0, 0, 0, 0.4);
-
 }
 
 #main__header {
@@ -10,11 +9,25 @@
   position: absolute;
   top: 30px;
   left: 400px;
-  /* box-shadow: 2px 2px 15px rgb(0, 0, 0, 0.4);
-  text-decoration: underline;
-  text-decoration-color: #5ECED1; */
 }
 
+#log__out__button {
+  position: absolute;
+  top: 30px;
+  right: 30px;
+  padding: 8px 12px;
+  border-radius: 4px;
+  background: none;
+  border: 4px solid #404040;
+  font-size: 1rem;
+  /* color: #404040; */
+  transition: 250ms ease;
+}
+
+#log__out__button:hover {
+  border: 4px solid #5eced1;
+  color: #5eced1;
+}
 
 @media only screen and (max-width: 1400px) {
   #main__header {
