--- a/src/css/Auth.css
+++ b/src/css/Auth.css
@@ -20,10 +20,10 @@
   display: flex;
   flex-direction: column;
   width: 300px;
-  padding: 40px 0;
-  margin-bottom: 20px;
-  border-top: 1px solid #1a1a1a;
-  border-bottom: 1px solid #1a1a1a;
+  padding: 40px 0 20px;
+  margin-bottom: 30px;
+  border-top: 1px solid #3a3a3a;
+  border-bottom: 1px solid #3a3a3a;
 }
 
 .auth__form form {
@@ -44,15 +44,26 @@
   color: #b0b0b0;
 }
 
+.auth__form input:last-of-type {
+  margin-bottom: 40px;
+
+}
+
 .auth__button {
   width: auto;
   align-self: center;
-  padding: 5px 10px;
-  border-radius: 5px;
+  padding: 8px 12px;
+  border-radius: 4px;
+  background: none;
+  border: 4px solid #b0b0b0;
+  font-size: 1rem;
+  color: #b0b0b0;
+  transition: 250ms ease;
 }
 
 .auth__button:hover {
-  background: #bce2e3;
+  border: 4px solid #5eced1;
+  color: #5eced1;
 }
 
 #toggle__link {
