--- a/src/css/LinkCard.css
+++ b/src/css/LinkCard.css
@@ -48,14 +48,30 @@
   height: 100%;
 }
 
+.card__tags {
+  align-self: flex-start;
+  padding: 8px 0;
+  font-size: 0.8rem;
+  overflow: hidden;
+}
+
+.card__tag {
+  font-weight: 300;
+  color: #bce2e3;
+  margin-bottom: 10px;
+}
+
 .card__icon {
   background: white;
   border-radius: 10px;
   padding: 5px;
+  max-height: 60px;
+  max-width: 60px;
 }
 
 .card__icon img {
   max-height: 50px;
+  max-width: 50px;
 }
 
 .comment__card {
@@ -80,7 +96,8 @@
 }
 
 .comment__card span:hover {
-  color: #bce2e3;
+  /* color: #bce2e3; */
+  color: #5eced1;
 }
 
 .comment__card.open {
@@ -97,7 +114,6 @@
   border-bottom-left-radius: 4px;
   padding: 0.2rem;
   background: #262626;
-  border-right: 1px solid #1a1a1a;
   width: 98%;
 }
 
@@ -109,6 +125,10 @@
   color: #b0b0b0;
   display: flex;
   flex-direction: column;
+}
+
+.comment__card.open button:hover {
+  color: #5eced1;
 }
 
 .card__open {
@@ -127,6 +147,30 @@
   box-shadow: 4px 1px 15px rgb(0, 0, 0, 0.3);
 }
 
+.comment__header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+.icon {
+  font-size: 1.1rem;
+  display: flex;
+}
+
+.icon:hover {
+  fill: #5eced1;
+}
+
+/* .comment_header > div {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+} */
+
 .comment__container {
   height: 100%;
   width: 100%;
@@ -142,10 +186,21 @@
 }
 
 .comment {
-  font-weight: 300;
-  font-size: 0.9rem;
-  color: #b0b0b0;
+  display: flex;
   margin-bottom: 8px;
   padding-bottom: 8px;
   border-bottom: 1px solid #303030;
+}
+
+.delete__comment {
+  padding-right: 8px;
+}
+
+.comment__body {
+  font-weight: 300;
+  font-size: 0.9rem;
+  color: #b0b0b0;
+  /* margin-bottom: 8px;
+  padding-bottom: 8px;
+  border-bottom: 1px solid #303030; */
 }
