--- a/src/css/LinkCard.css
+++ b/src/css/LinkCard.css
@@ -3,6 +3,7 @@
 .card__container {
   margin-left: 25px;
   margin-bottom: 25px;
+  
 }
 
 .cards {
@@ -12,7 +13,7 @@
   position: absolute;
   top: 180px;
   left: 250px;
-  margin-right: 25px;
+  margin-right: 160px;
 }
 
 .card {
@@ -37,8 +38,18 @@
   transform: translateY(-5px);
 }
 
+.card__header {
+  display: flex;
+  justify-content: space-between;
+}
+
 .card__title {
   font-size: 1.3rem;
+}
+
+.edit__link {
+  font-size: 1.2rem;
+  align-self: flex-start;
 }
 
 .card__content {
@@ -46,19 +57,46 @@
   justify-content: space-between;
   align-items: flex-end;
   height: 100%;
+  text-decoration: none;
+  overflow: hidden;
 }
 
 .card__tags {
   align-self: flex-start;
   padding: 8px 0;
   font-size: 0.8rem;
-  overflow: hidden;
 }
 
 .card__tag {
   font-weight: 300;
   color: #bce2e3;
   margin-bottom: 10px;
+}
+
+.icon__click__container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.click__count__container {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  font-size: 0.8rem;
+  height: 60px;
+  width: 60px;
+  border-radius: 10px;
+  margin-bottom: -2px;
+}
+
+#card__click__count {
+  font-size: 1.4rem;
+  color: #404040;
+  margin: 0 auto;
 }
 
 .card__icon {
@@ -162,14 +200,6 @@
 .icon:hover {
   fill: #5eced1;
 }
-
-/* .comment_header > div {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-} */
 
 .comment__container {
   height: 100%;
