--- a/src/css/SideNav.css
+++ b/src/css/SideNav.css
@@ -1,10 +1,18 @@
 #side__nav {
   width: 300px;
   height: 100%;
-  position: absolute;
+  position: fixed;
   top: 0;
   bottom: 0;
   left: 30px;
   background: #262626;
   border-left: 8px solid #5eced1;
+}
+
+#add__link__button {
+  position: absolute;
+  bottom: 30px;
+  right: 0;
+  left: 0;
+  margin: 0 auto;
 }
