all comment, link, tag, and auth features working

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -45,7 +45,7 @@ body {
 }
 
 .modal form input {
-  font-size: 1rem;;
+  font-size: 1rem;
   height: 30px;
   padding: 4px;
   margin-bottom: 16px;
